--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,15 @@
     <description>Ceph Amazon S3</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>14</java.version>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
         <surefire.argLine>-Dfile.encoding=${encoding} -Xms512m -Xmx1024m -Duser.timezone=GMT+3</surefire.argLine>
         <failsafe.argLine>-Dfile.encoding=${encoding} -Xms512m -Xmx2048m -Duser.timezone=GMT+3</failsafe.argLine>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-        <maven-pmd-plugin.version>3.15.0</maven-pmd-plugin.version>
-        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
         <lombok.version>1.18.20</lombok.version>
         <aws-java-sdk.version>1.12.159</aws-java-sdk.version>
         <logback-core.version>1.2.10</logback-core.version>
@@ -69,6 +68,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -121,4 +126,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
